<resources>
    <string name="mapKey" templateMergeStrategy="preserve" translatable="false">AIzaSyCGhao5aYDhzVLZHHx49BGQWoeqGjuVP1c</string>
    <string name="app_name">Ramez Driver</string>
    <string name="message_yes">Yes</string>
    <string name="message_no">No</string>
    <string name="text_save">Save</string>
    <string name="text_login_password">Password</string>
    <string name="text_login_forgot_password">Forgot Password?</string>
    <string name="text_login_login">Login</string>
    <string name="text_sign_in_with">OR Sign in with</string>
    <string name="text_login_dont_have_an_account">Don\'t have an account ?</string>
    <string name="text_country_bahrain" translatable="false">Bahrain</string>
    <string name="text_profile_phone_number">Phone number </string>
    <string name="text_title_edit_profile">Edit Profile</string>
    <string name="text_title_about_us">About Us</string>
    <string name="text_title_select_language">Please Select Language</string>
    <string name="text_registration_email_id">Email Id</string>
    <string name="text_registration_change_password">Change password</string>
    <string name="text_registration_country">Country</string>
    <string name="string_menu_home">Home</string>
    <string name="text_langiage_english">English</string>
    <string name="text_language_arabic">Arabic</string>
    <string name="text_edit_profile_change_password">Change Password</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="cancel_label">Cancel</string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500</string>
    <string name="dummy1">Lorem Ipsum is simply dummy text </string>
    <string name="dummy2" translatable="false">A tour of the application </string>
    <string name="by_app">by_app</string>
    <string name="share_with">share with</string>
    <string name="no_address">no Address</string>
    <string name="choose_country">please Choose Country </string>
    <string name="choose_nearest">please Choose Nearest  Branch </string>
    <string name="create_account">Create Account</string>
    <string name="remember">Remember</string>
    <string name="skip_register">Skip Register</string>
    <string name="new_member">New Member</string>
    <string name="register_now">Register Now</string>
    <string name="first_name">First Name</string>
    <string name="text_family">Family Name</string>
    <string name="text_confirm_password">Confirm Passward</string>
    <string name="login_now">Login Now</string>
    <string name="terms1"> By clicking on Register and Accept, you acknowledge that you have read </string>
    <string name="terms2">Privacy policy</string>
    <string name="terms3">and agree to</string>
    <string name="terms4">the terms of  Ramez</string>
    <string name="confirm">Confirm</string>
    <string name="reset_pass">Reset Password</string>
    <string name="forget_pass">Forget Password</string>
    <string name="enter_code1">Please enter the code</string>
    <string name="enter_phone">Please enter the registered mobile number To retrieve the password</string>
    <string name="confirm_phone">Confirm Phone Number </string>
    <string name="search_product">Search Product Here</string>
    <string name="view_all">View All</string>
    <string name="best_products">Best Product</string>
    <string name="best_sell">Best Seller</string>
    <string name="offers">Products Offer</string>
    <string name="product_name">product name product name product name</string>
    <string name="_10220_aed">1.935</string>
    <string name="_10220_aed1">1.995</string>
    <string name="_50_off">50 % OFF</string>
    <string name="category">Categories</string>
    <string name="cart">Cart</string>
    <string name="myaccount">My Account</string>
    <string name="offer_text">Offers </string>
    <string name="fail_to_get_data">Fail to get data</string>
    <string name="fail_to_verify_account">Fail to verify  account</string>
    <string name="reload">Reload</string>
    <string name="suggested_product">Suggested Products</string>
    <string name="product_desc">Product Features</string>
    <string name="desc">Desc \n Desc \n Desc \n Dec</string>
    <string name="product_review">Customer Reviews</string>
    <string name="add_to_cart">Add Product To Cart</string>
    <string name="fav_products"> Favorite Products</string>
    <string name="my_order">My Orders</string>
    <string name="address">My Address</string>
    <string name="customer_service">Customer support</string>
    <string name="lang_setting">Language setting </string>
    <string name="change_city_branch">Change Branch</string>
    <string name="conditions">Terms and Conditions</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">logout</string>
    <string name="dummy_text">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق. هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق. هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.</string>
    <string name="app_version">App Version</string>
    <string name="accept">Accept</string>
    <string name="add_rate">Please add a rating for the application services</string>
    <string name="add_rate_product">Please add a review to the product</string>
    <string name="rate_product">Rating Product</string>
    <string name="Edit">Edit</string>
    <string name="complete_request">Complete Order</string>
    <string name="DeliveryTime1">Delivery Time </string>
    <string name="rateRequest">Rate Order</string>
    <string name="request_no">Order Number:</string>
    <string name="ordered">ordered</string>
    <string name="order_send">Order Send </string>
    <string name="orderDetails">Bill Details</string>
    <string name="current_orders">Current Orders</string>
    <string name="krof">كارفور</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="name">Name</string>
    <string name="add_new_address">Add New Address</string>
    <string name="new_address">New Address</string>
    <string name="lat_line">longitude line</string>
    <string name="lng_line">Latitude line</string>
    <string name="address_in_map">Address In Map</string>
    <string name="region">Region</string>
    <string name="block">block Number </string>
    <string name="street_num">Street Number</string>
    <string name="building">Building Number</string>
    <string name="flat">Flat</string>
    <string name="choose_address_gps">Choose Location Using GPS</string>
    <string name="loading">Loading</string>
    <string name="phonePermissionExplain">You have just denied phone call permission,
        You can\'t make any call until you accept the permission</string>
    <string name="ok">Ok</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="take_pic">Take Photo</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="do_yo_want">Do you want to shop now ?!</string>
    <string name="please_login">Please log in to log in to  </string>
    <string name="account_data">Your account information</string>
    <string name="register">Register</string>
    <string name="choose_branch">Please Choose Branch</string>
    <string name="choose_city">Please Choose City</string>
    <string name="choose_currency">Please Choose currency</string>
    <string name="ar_lang" translatable="false">Arabic</string>
    <string name="en_lang" translatable="false">English</string>
    <string name="dollar" translatable="false">dollar</string>
    <string name="pound" translatable="false">pound</string>
    <string name="euro" translatable="false">euro</string>
    <string name="dollar_ar" translatable="false">دولار </string>
    <string name="pound_ar" translatable="false">جنيه</string>
    <string name="euro_ar" translatable="false">يورور</string>
    <string name="invoice_details">Invoice Details </string>
    <string name="total">Total</string>
    <string name="reorder_cart">Reorder Cart</string>
    <string name="reorder_product">Re Order Product</string>
    <string name="price">price</string>
    <string name="total1">Total </string>
    <string name="pieces">Pieces</string>
    <string name="product_count">Product Count</string>
    <string name="product_cost">Product Cost</string>
    <string name="textContinuePurchaseBtn">Pay Now</string>
    <string name="add_card">Add Card</string>
    <string name="text_card_name">Card Holder Name</string>
    <string name="text_card_num">Card Number</string>
    <string name="text_card_date">Card Expire Date</string>
    <string name="default_card">Using The Default Card</string>
    <string name="choose_card_type">Choose Card Type</string>
    <string name="enter_amount">Determine how much credit you want Add it to the wallet</string>
    <string name="AED">AED</string>
    <string name="follow">Follow</string>
    <string name="add_balance">Add Balance</string>
    <string name="no_balance">Sorry !!</string>
    <string name="no_balance1">You do not have enough balance Click here to add credit</string>
    <string name="Hello">hello</string>
    <string name="Hello1">hello wafaa</string>
    <string name="enter_message">Enter Message</string>
    <string name="add_comment">Please add a comment to the product</string>
    <string name="add">Add</string>
    <string name="add_comm">Add Comment</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="product_total">Item Total</string>
    <string name="deliver_fees">Delivery Fees</string>
    <string name="delivery_to">Delivery to : </string>
    <string name="deliver_time">Delivery times</string>
    <string name="choose_payment_type">Choose a payment Method </string>
    <string name="delivery_send">Place Order</string>
    <string name="save_update">Continue Editing</string>
    <string name="textFromtime">9 A.m  9 P.M </string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="price1">price </string>
    <string name="delete">delete</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="fail_signin">Fail To sign in</string>
    <string name="please_wait_login">Please wait to  login</string>
    <string name="text_email">Email</string>
    <string name="textEmptyOrders">No orders found</string>
    <string name="textNoXadoxOrder">You have not ordered products from Ramez yet</string>
    <string name="textStartShopping">Start Shopping</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="profile">Profile</string>
    <string name="change_country">Change Country</string>
    <string name="Message">Message</string>
    <string name="Change_Password">Change Password</string>
    <string name="FinancialReports">Financial Reports</string>
    <string name="log_out"> Log out </string>
    <string name="languages">Language</string>
</resources>