<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn="navigation_view">


<item
    android:id="@+id/nav_home"
    android:icon="@drawable/home_icon"
    android:title="@string/menu_home" />
<item
    android:id="@+id/nav_profile"
    android:icon="@drawable/ic_profile"
    android:title="@string/profile" />
    <item
        android:id="@+id/nav_change_pass"
        android:icon="@drawable/change_pass_icon"
        android:title="@string/Change_Password" />
<item
    android:id="@+id/nav_financial"
    android:icon="@drawable/ic_baseline_payment"
    android:title="@string/FinancialReports" />
<item
    android:id="@+id/nav_change_country"
    android:icon="@drawable/ic_edit_location"
    android:iconTint="@color/green"
    android:title="@string/change_country" />
<item
    android:id="@+id/nav_lang"
    android:icon="@drawable/choose_lang_icon"
    android:iconTint="@color/green"
    android:title="@string/languages" />
<item
    android:id="@+id/nav_messages"
    android:icon="@drawable/support_icon"
    android:title="@string/Message" />

<item
    android:id="@+id/nav_logout"
    android:icon="@drawable/exit_icon"
    android:title="@string/log_out" />





</menu>
