<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_top_corner_white_fill"
        android:orientation="vertical"
        android:paddingTop="@dimen/_30sdp">


        <com.ramez.shopp.SpichalViews.STextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/please_login"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <com.ramez.shopp.SpichalViews.STextView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/account_data"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />


<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:layout_marginStart="@dimen/_16sdp"
    android:layout_marginEnd="@dimen/_16sdp"
    android:layout_marginBottom="@dimen/_30sdp"
    android:layout_height="wrap_content">

    <com.ramez.shopp.SpichalViews.STextViewBold
        android:id="@+id/yesBtn"
        android:background="@drawable/round_corner_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:minWidth="@dimen/_100sdp"
        android:padding="@dimen/_8sdp"
        android:text="@string/text_login_login"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />
    <com.ramez.shopp.SpichalViews.STextViewBold
        android:id="@+id/noBtn"
        android:background="@drawable/round_corner_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="@dimen/_16sdp"
        android:minWidth="@dimen/_100sdp"
        android:text="@string/register"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />
</LinearLayout>



    </LinearLayout>

</RelativeLayout>