<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.github.siyamed.shapeimageview.CircularImageView
        android:id="@+id/userImage"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_marginTop="@dimen/_16sdp"
        app:civ_border_color="@color/white"
        app:civ_border_width="@dimen/_1sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/small_logo"
        app:srcCompat="@drawable/small_logo" />

    <com.ramez.driver.SpichalViews.STextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:id="@+id/nameTxt"
        android:text="@string/nav_header_title"
        android:textColor="@color/white"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <com.ramez.driver.SpichalViews.STextViewBold
        android:id="@+id/mobileTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>