<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.ramez.shopp.SpichalViews.STextView
            android:id="@+id/qty_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/item"
            android:textDirection="locale"
            android:textSize="12sp"
            android:textStyle="bold" />

        <com.ramez.shopp.SpichalViews.STextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/quantity"
            android:textDirection="locale"
            android:textSize="12sp"
            android:textStyle="bold" />

        <com.ramez.shopp.SpichalViews.STextView
            android:id="@+id/price_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/price1"
            android:textDirection="locale"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="4dp"
        android:background="@color/gray_view" />
</LinearLayout>