<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noDataLY"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
      android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                app:srcCompat="@drawable/ic_choices"
                app:tint="@color/colorAppRed" />

            <com.ramez.shopp.SpichalViews.STextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/textEmptyOrders"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.ramez.shopp.SpichalViews.STextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/textNoXadoxOrder" />

            <Button
                android:id="@+id/btnBrowseProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/textStartShopping" />


        </LinearLayout>


    </LinearLayout>
